# snapledger

./: .gitignore  Agents.md  LICENSE  README.md  build.gradle.kts  et --hard c5f4afb  gradlew  settings.gradle.kts
android/: gradlew.bat
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: error_handlers.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  budget.py  expense.py  insight.py  sync_mutation_log.py
backend/app/repositories/: __init__.py  budget_repo.py  category_repo.py  expense_repo.py
backend/app/schemas/: __init__.py  budget.py  category.py  dashboard.py  expense.py  insight.py  sync.py
backend/app/services/: __init__.py  budget_service.py  category_service.py  dashboard_service.py  insight_service.py  parser_service.py  receipt_service.py  sync_service.py
backend/evals/: README.md  insight_contract_robustness.jsonl  insight_guardrail_adversarial.jsonl  receipt_canary.jsonl  receipt_full.jsonl  receipt_injection.jsonl  receipt_non_fabrication_fields.jsonl  sync_determinism_stress.jsonl
backend/scripts/: eval_support.py  export_local_receipts_to_incoming.py  generate_receipt_eval_metrics_md.py  manage_receipt_eval_staging.py  run_insight_eval.py  run_receipt_eval.py  run_receipt_eval_suite.sh  run_sync_eval.py
backend/tests/: .test_api_validation_and_behavior.py.swp  test_api_contract_surface.py  test_api_validation_and_behavior.py  test_error_and_security.py  test_expense_repository.py  test_migrations.py  test_parser_service.py  test_services.py
(+211 files in other folders)
