[project]
name = "snapledger-backend"
version = "0.1.0"
description = "SnapLedger FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pillow>=12.2.0,<13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.4.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
